testproblems/linked_lists/compile.txt
user.c: In function ‘dequeue’:
user.c:32:3: error: expected expression before ‘else’
   else
   ^~~~
